# hash-modulo-alpha

./: README.md  SUPPORT.md  alpha-hash.cabal  plot.py
exe/: Main.hs
src/: AlphaHashEfficient.hs  AlphaHashEfficientHash.hs  AlphaHashInefficient.hs  AlphaHashOptimizedHash.hs  AlphaHashOptimizedHash16Bit.hs  Benchmark.hs  Collision.hs  Expr.hs  Hash.hs  ManualBenchmark.hs
